# ft-with-updatable-meta

./: Cargo.toml  build.sh
res/: ft.wasm
src/: lib.rs
